Poprawiono błędy wolontariusz/akcja/harmonogram.